# lvgl-ir

./: CMakeLists.txt
inc/: demo.h  hiir.h  ir_code.h  keypad.h  lv_conf.h  lv_ex_conf.h  ui_fb.h  ui_setting_panel.h
src/: demo.c  keypad.c  main.c  ui_fb.c  ui_main.bak.c  ui_main.c  ui_main.c.bak  ui_setting_panel.c
